# twitterxscraper

./: README.md  pyproject.toml  requirements.txt
examples/: scrape_user.py
twitterxscraper/: __init__.py  cli.py  scraper.py  utils.py
