[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterxscraper"
version = "1.0.0"
description = "An open source Python package CLI tool for scraping public X (Twitter) tweets using Playwright"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Caleb Wodi", email = "calebwodi33@gmail.com"}
]
dependencies = [
    "playwright",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/calchiwo/twitterxscraper"
Repository = "https://github.com/calchiwo/twitterxscraper.git"
"Bug Tracker" = "https://github.com/calchiwo/twitterxscraper/issues"

[project.scripts]
twitterxscraper = "twitterxscraper.cli:main"